增加 分享插件

--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,49 @@
 	<body>
 		<div id="root" />
 		<script type="text/javascript" src="bundle.js"></script>
+		
+		<div class="bdsharebuttonbox">
+			<a href="#" class="bds_more" data-cmd="more"></a>
+			<a href="#" class="bds_qzone" data-cmd="qzone"></a>
+			<a href="#" class="bds_tsina" data-cmd="tsina"></a>
+			<a href="#" class="bds_tqq" data-cmd="tqq"></a>
+			<a href="#" class="bds_renren" data-cmd="renren"></a>
+			<a href="#" class="bds_weixin" data-cmd="weixin"></a>
+		</div>
+		<script>
+		window._bd_share_config={
+			"common":{
+				"bdSnsKey":{},
+				"bdText":"i am lida",
+				"bdMini":"2",
+				"bdPic":"",
+				"bdStyle":"0",
+				"bdSize":"20",
+				'bdDes':'您的自定义分享摘要',		//'请参考自定义分享摘要'
+				// 'bdText':'您的自定义分享内容',		//'请参考自定义分享内容'
+				'bdPopTitle':'您的自定义pop窗口标题',	//'请参考自定义pop窗口标题'
+				'bdTop':'您的自定义侧栏高度',		//'请参考自定义侧栏高度'
+				'bdComment':'您的自定义分享评论',	//'请参考自定义分享评论'
+				// 'bdPic':'您的自定义分享出去的图片',	//'请参考自定义分享出去的图片'
+				// 'searchPic':'是否自动抓取页面图片',//'0为抓取，1为不抓取，默认为0，目前只针对新浪微博'
+				// 'wbUid':'您的自定义微博 ID',		//'请参考自定义微博 id'
+				// 'render':false,				//'请参考自定义分享回流量统计'
+				// 'review':'normal',			//'请参考自定义分享回流签名'
+				// 'snsKey':{'tsina':'appkey'}		//'请参考自定义分享到平台的appkey'
+			},
+			"share":{},
+			"image":{
+				"viewList":["qzone","tsina","tqq","renren","weixin"],
+				"viewText":"分享到：",
+				"viewSize":"16"				
+			},
+			"selectShare":{
+				"bdContainerClass":null,
+				"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]
+			}
+		};
+			with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)]
+		</script>
+       
 	</body>
 </html>
