--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 	</head>
 	<body>
 		<div id="root" />
+		<script type="text/javascript" src="common.js"></script>
 		<script type="text/javascript" src="bundle.js"></script>
 		
 		<div class="bdsharebuttonbox">
